--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #d8f9d3;
 }
 
 code {
@@ -19,8 +20,10 @@ body {
 
 canvas {
   position: absolute;
-  top: 0;
+  top: 48px;
   right: 0;
+  border-radius: 10px;
+  margin: 5px;
 }
 
 #root {
