further stlying changes and messing around with funcality

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+html {
+  height: 100%;
+}
 body {
   margin: 0;
   padding: 0;
@@ -6,16 +9,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #d8f9d3;
+  background-color: #d8f9d3 !important;
+  min-height: 100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-
-body {
-  overflow-y: hidden;
 }
 
 canvas {
