--- a/src/App.css
+++ b/src/App.css
@@ -124,5 +124,40 @@
 }
 .MarketDashboard {
   justify-content: left;
-  margin: 20px 5%;
+  width: 100%;
+  position: absolute;
+  margin-top: 9%;
+  height: 100%;
+  background: #1b1b1b;
+  color: #70717b;
+}
+.top-section {
+  padding: 20px;
+  width: 50%;
+  margin-left: 25%;
+  border-radius: 5px;
+}
+.budget {
+  padding: 10px;
+}
+.buy {
+  float: left;
+  margin-left: 25%;
+  margin-top: 30px;
+}
+.sell {
+  float: right;
+  margin-right: 25%;
+  margin-top: 30px;
+}
+.dropdown-menu {
+  overflow-x: auto;
+  height: auto;
+  max-height: 200px;
+  position: absolute;
+  top: 0 !important;
+  left: 0 !important;
+}
+.sell-btn {
+  padding: 5px 66px !important;
 }
