--- a/src/App.css
+++ b/src/App.css
@@ -40,21 +40,20 @@
   left: 45%;
   top: 50%;
 }
+/* Farmer */
+
 .farmerDash {
   display: flex;
   justify-content: left;
   margin: 20px;
 }
-.fieldDash {
-  display: flex;
-  justify-content: left;
-  margin: 0 auto;
+.FarmerDashboard {
+  max-width: 50%;
 }
 .currentBudget {
   flex: 1;
   padding: 20px;
   background-color: aquamarine;
-  width: 100%;
   border-radius: 5px;
   color: grey;
   margin: 10px;
@@ -65,6 +64,7 @@
 
 .totalAnimals {
   display: flex;
+  justify-content: center;
 }
 .totalAnimals img {
   margin-bottom: 10px;
@@ -87,7 +87,20 @@
 }
 .products {
   display: flex;
-  margin-top: 60px;
+  margin-top: 30px;
+  flex-wrap: wrap;
+  margin-left: 15%;
+}
+.nonMeats {
+  display: flex;
+  margin-top: 30px;
+  flex-wrap: wrap;
+}
+.meats {
+  display: flex;
+  margin-top: 30px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 .products p {
   border: solid 1px lightgray;
@@ -96,8 +109,8 @@
 }
 .buyables {
   margin-top: 60px;
-  width: 60%;
-  margin: 30px auto;
+  width: 70%;
+  margin-left: 15%;
 }
 .buyables p {
   border: solid 1px lightgray;
@@ -108,6 +121,11 @@
   padding: 10px;
 }
 /*field*/
+.fieldDash {
+  display: flex;
+  justify-content: left;
+  margin-left: 5%;
+}
 .FieldDashboard {
   justify-content: left;
   margin: 20px 5%;
@@ -116,6 +134,14 @@
 .fieldContents {
   margin-top: 60px;
   margin: 30px auto;
+}
+.fieldContents button {
+  margin: 10px;
+  border-radius: 3px;
+}
+.fieldContents button:hover {
+  background: #3661ac;
+  color: white;
 }
 
 /*Market*/
@@ -127,7 +153,6 @@
   width: 100%;
   position: absolute;
   margin-top: 9%;
-  height: 100%;
   background: #1b1b1b;
   color: #70717b;
 }
